added to new styling format on home page

--- a/src/styles/Section.css
+++ b/src/styles/Section.css
@@ -1,8 +1,23 @@
-.section {
+/* .section {
   background: #f3e5f5;
   padding: 20px;
 }
 
 .section h2 {
   text-align: center;
+} */
+
+#moveMe {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100px;
+  height: 100px;
+  background-color: red;
+}
+
+.circular {
+  transition: transform 0.5s;
+  transform: rotate(360deg);
 }
