--- a/src/styles/FlipperStyle.css
+++ b/src/styles/FlipperStyle.css
@@ -15,6 +15,7 @@ p {
 .flip-container .front {
     width: 500px;
     height: 500px;
+    /* background-image: url(../assets/test-tumble.png); */
 }
 
 /* .flipper .front:hover {
@@ -26,7 +27,7 @@ p {
 .flip-container .front,
 .flip-container .back {
     position: absolute;
-    top: 0;
+    top: 0px;
     left: 0;
     width: 100%;
     height: 100%;
@@ -59,8 +60,10 @@ p {
     display: flex;
     align-items: center;
     justify-content: center;
-    -webkit-filter: blur(5px);
+    /* -webkit-filter: blur(5px); */
     left: -10%;
+    /* background-image: url(../assets/test-tumble.png);
+    background-size: cover; */
     /* font-size: 30px; */
     /* font-weight: bold; */
     /* color: #000; */
@@ -78,4 +81,14 @@ p {
     /* box-shadow: inset 0 0 20px #fff, inset 10px 0 46px #eaf5fc,
         inset 88px 0px 60px #c2d8fe, inset -20px -60px 100px #fde9ea,
         inset 0 50px 140px #fde9ea, 0 0 90px #fff; */
+}
+
+.front div {
+    background-image: url(../assets/test-tumble.png);
+    background-size: cover;
+}
+
+.back div {
+    background-image: url(../assets/test-tumble-down.png);
+    background-size: cover;
 }
