--- a/src/styles/FlipperStyle.css
+++ b/src/styles/FlipperStyle.css
@@ -27,21 +27,21 @@ p {
 .flip-container .front,
 .flip-container .back {
     position: absolute;
-    top: 0px;
-    left: 0;
+    top: 50px;
+    left: 0px;
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
 }
 
 .flip-container .back {
-    transform: rotateY(180deg);
+    transform: rotateX(180deg);
     /* background-color: pink; */
 
 }
 
 .flip-container.flip .flipper {
-    transform: rotateY(180deg);
+    transform: rotateX(180deg);
 }
 
 /* .flip-div:hover {
